--- a/.gitignore
+++ b/.gitignore
@@ -1,174 +1,69 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+import cv2
+import easyocr
+import numpy as np
+import matplotlib.pyplot as plt
 
-# C extensions
-*.so
+# Path to the input images
+IMAGE_PATHS = ['/content/WhatsApp Image 2025-05-11 at 17.44.19_f626356c.jpg',
+              '/content/WhatsApp Image 2025-05-11 at 17.44.20_92c315bf.jpg']
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# Process each image individually
+for image_path in IMAGE_PATHS:
+    # Load the image
+    image = cv2.imread(image_path)
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+    if image is None:
+        raise FileNotFoundError(f"Image not found at path: {image_path}")
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+    # Convert BGR to RGB for visualization
+    image_rgb = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
+    # Convert to grayscale
+    gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)
 
-# Translations
-*.mo
-*.pot
+    # Detect edges using Canny edge detection
+    edges = cv2.Canny(gray_image, threshold1=100, threshold2=200)
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+    # Initialize EasyOCR Reader
+    reader = easyocr.Reader(['en'], gpu=False)
 
-# Flask stuff:
-instance/
-.webassets-cache
+    # Perform OCR on the original image (BGR)
+    results = reader.readtext(image)
 
-# Scrapy stuff:
-.scrapy
+    # Draw results on a copy of the image
+    image_with_boxes = image.copy()
 
-# Sphinx documentation
-docs/_build/
+    for (bbox, text, prob) in results:
+        if prob > 0.5:
+            (top_left, top_right, bottom_right, bottom_left) = bbox
+            top_left = tuple(map(int, top_left))
+            bottom_right = tuple(map(int, bottom_right))
 
-# PyBuilder
-.pybuilder/
-target/
+            cv2.rectangle(image_with_boxes, top_left, bottom_right, (0, 255, 0), 2)
+            cv2.putText(image_with_boxes, text, (top_left[0], top_left[1] - 10),
+                        cv2.FONT_HERSHEY_SIMPLEX, 0.8, (255, 0, 0), 2)
 
-# Jupyter Notebook
-.ipynb_checkpoints
+    # Convert the final image with boxes to RGB for display
+    image_with_boxes_rgb = cv2.cvtColor(image_with_boxes, cv2.COLOR_BGR2RGB)
 
-# IPython
-profile_default/
-ipython_config.py
+    # Display all steps for the current image
+    fig, axs = plt.subplots(1, 4, figsize=(20, 6))
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+    axs[0].imshow(image_rgb)
+    axs[0].set_title("Original Image")
+    axs[0].axis('off')
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+    axs[1].imshow(gray_image, cmap='gray')
+    axs[1].set_title("Grayscale Image")
+    axs[1].axis('off')
 
-# UV
-#   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#uv.lock
+    axs[2].imshow(edges, cmap='gray')
+    axs[2].set_title("Edge Detection")
+    axs[2].axis('off')
 
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
+    axs[3].imshow(image_with_boxes_rgb)
+    axs[3].set_title("Detected Number Plate")
+    axs[3].axis('off')
 
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/latest/usage/project/#working-with-version-control
-.pdm.toml
-.pdm-python
-.pdm-build/
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
-
-# Ruff stuff:
-.ruff_cache/
-
-# PyPI configuration file
-.pypirc
+    plt.tight_layout()
+    plt.show()
